conversion encodage en utf-8

--- a/documentation/Env/Env_Country.html
+++ b/documentation/Env/Env_Country.html
@@ -5,7 +5,7 @@
 			<!-- template designed by Marco Von Ballmoos -->
 			<title>Documentation de la classe Env_Country</title>
 			<link rel="stylesheet" href="../media/stylesheet.css" />
-			<meta http-equiv='Content-Type' content='text/html; charset=iso-8859-1'/>
+			<meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
 		</head>
 		<body>
 			<div class="page-body">			
