--- a/documentation/blank.html
+++ b/documentation/blank.html
@@ -2,7 +2,7 @@
 <head>
 	<title>Generated Documentation</title>
 			<link rel="stylesheet" href="media/stylesheet.css" />
-			<meta http-equiv='Content-Type' content='text/html; charset=iso-8859-1'/>
+			<meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
 </head>
 <body>
 <div align="center"><h1>Documentation</h1></div>
