--- a/documentation/classtrees_Env.html
+++ b/documentation/classtrees_Env.html
@@ -5,7 +5,7 @@
 			<!-- template designed by Marco Von Ballmoos -->
 			<title></title>
 			<link rel="stylesheet" href="media/stylesheet.css" />
-			<meta http-equiv='Content-Type' content='text/html; charset=iso-8859-1'/>
+			<meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
 		</head>
 		<body>
 						
