--- a/documentation/packages.html
+++ b/documentation/packages.html
@@ -6,7 +6,7 @@
 			<title></title>
 			<link rel="stylesheet" href="media/stylesheet.css" />
 			<link rel="stylesheet" href="media/banner.css" />
-			<meta http-equiv='Content-Type' content='text/html; charset=iso-8859-1'/>
+			<meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
 		</head>
 		<body>
 			<div class="banner">
