--- a/documentation/Env/Env_ParcelPoint.html
+++ b/documentation/Env/Env_ParcelPoint.html
@@ -5,10 +5,11 @@
 			<!-- template designed by Marco Von Ballmoos -->
 			<title>Documentation de la classe Env_ParcelPoint</title>
 			<link rel="stylesheet" href="../media/stylesheet.css" />
-			<meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
+			<meta http-equiv='Content-Type' content='text/html; charset=UTF-8'/>
 		</head>
 		<body>
-			<div class="page-body">			
+			<div class="page-body">			
+
 <h2 class="class-name">Class Env_ParcelPoint</h2>
 
 <a name="sec-description"></a>
@@ -23,7 +24,7 @@
 	<div class="info-box-body">
         		<!-- ========== Info from phpDoc block ========= -->
 <p class="short-description">EnvoiMoinsCher API - la classe pour la gestion des points relais.</p>
-<p class="description"><p>Vous pouvez utiliser cette classe pour charger un ou plusieurs points relais pour le dépôt et le retrait de votre envoi.</p></p>
+<p class="description"><p>Vous pouvez utiliser cette classe pour charger un ou plusieurs points relais pour le dÃ©pÃ´t et le retrait de votre envoi.</p></p>
 	<ul class="tags">
 				<li><span class="field">author:</span> EnvoiMoinsCher &lt;<a href="mailto:dev@envoimoinscher.com">dev@envoimoinscher.com</a>&gt;</li>
 				<li><span class="field">version:</span> 1.0</li>
@@ -117,7 +118,7 @@
 	</div>
 
 	<!-- ========== Info from phpDoc block ========= -->
-<p class="short-description">La variable qui détermine si $points va contenir un seul ou plusieurs points relais. La valeur par défaut (false) signifie qu'on gère uniquement un point relais.</p>
+<p class="short-description">La variable qui dÃ©termine si $points va contenir un seul ou plusieurs points relais. La valeur par dÃ©faut (false) signifie qu'on gÃ¨re uniquement un point relais.</p>
 	<ul class="tags">
 				<li><span class="field">access:</span> public</li>
 			</ul>
@@ -139,7 +140,7 @@
 	</div>
 
 	<!-- ========== Info from phpDoc block ========= -->
-<p class="short-description">Le tableau avec les points relais chargés qui prend comme clés :  pickup_point (point relais de dépôt) 
+<p class="short-description">Le tableau avec les points relais chargÃ©s qui prend comme clÃ©s :  pickup_point (point relais de dÃ©pÃ´t) 
 et dropoff_point (point relais de retrait).</p>
 	<ul class="tags">
 				<li><span class="field">access:</span> public</li>
@@ -162,7 +163,7 @@ et dropoff_point (point relais de retrait).</p>
 	</div>
 
 	<!-- ========== Info from phpDoc block ========= -->
-<p class="short-description">Le tableau qui détermine quelles valeurs sont acceptées comme paramètres de la requête.</p>
+<p class="short-description">Le tableau qui dÃ©termine quelles valeurs sont acceptÃ©es comme paramÃ¨tres de la requÃªte.</p>
 	<ul class="tags">
 				<li><span class="field">access:</span> protected</li>
 			</ul>
@@ -172,7 +173,8 @@ et dropoff_point (point relais de retrait).</p>
 		
 
 </div>
-							<h4>Inherited Variables</h4>
+
+							<h4>Inherited Variables</h4>
 				<A NAME='inherited_vars'><!-- --></A>
 									<p>Inherited from <span class="classname"><a href="../Env/Env_WebService.html">Env_WebService</a></span></p>
 					<blockquote>
@@ -222,7 +224,7 @@ et dropoff_point (point relais de retrait).</p>
 	</div> 
 	
 	<!-- ========== Info from phpDoc block ========= -->
-<p class="short-description">La fonction qui récupère un point relais.</p>
+<p class="short-description">La fonction qui rÃ©cupÃ¨re un point relais.</p>
 	<ul class="tags">
 				<li><span class="field">access:</span> public</li>
 			</ul>
@@ -238,10 +240,10 @@ et dropoff_point (point relais de retrait).</p>
 			<ul class="parameters">
 					<li>
 				<span class="var-type">string</span>
-				<span class="var-name">$type</span><span class="var-description">: Type du points relais à charger (dropoff_point ou pickup_point).</span>			</li>
+				<span class="var-name">$type</span><span class="var-description">: Type du points relais Ã  charger (dropoff_point ou pickup_point).</span>			</li>
 					<li>
 				<span class="var-type">string</span>
-				<span class="var-name">$code</span><span class="var-description">: Le code du points relais composé d'un code opérateur et d'un identifiant (par exemple : SERN-206059 renvoie au point relais du Sernam à Lille).</span>			</li>
+				<span class="var-name">$code</span><span class="var-description">: Le code du points relais composÃ© d'un code opÃ©rateur et d'un identifiant (par exemple : SERN-206059 renvoie au point relais du Sernam Ã  Lille).</span>			</li>
 				</ul>
 		
 			
@@ -264,7 +266,7 @@ et dropoff_point (point relais de retrait).</p>
 
 
 	<div align="center"><small>
-		Documentation générée le 29/04/2011 avec <a href="http://www.phpdoc.org" target="_blank">phpDocumentor 1.4.3</a>
+		Documentation gÃ©nÃ©rÃ©e le 29/04/2011 avec <a href="http://www.phpdoc.org" target="_blank">phpDocumentor 1.4.3</a>
 	</small></div>
 	</div></body>
-</html>
+</html>
