--- a/documentation/blank.html
+++ b/documentation/blank.html
@@ -2,17 +2,17 @@
 <head>
 	<title>Generated Documentation</title>
 			<link rel="stylesheet" href="media/stylesheet.css" />
-			<meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
+			<meta http-equiv='Content-Type' content='text/html; charset=UTF-8'/>
 </head>
 <body>
 <div align="center"><h1>Documentation</h1></div>
 <b>Voici la documentation de la librairie PHP pour l'API d'<a href="http://www.envoimoinscher.com">EnvoiMoinsCher</a>.
 </b><br /><br />
-Vous pouvez chercher les informations qui vous intéressent dans la colonne gauche où sont répertoriés les classes et les fichiers de la librairie.
+Vous pouvez chercher les informations qui vous intÃ©ressent dans la colonne gauche oÃ¹ sont rÃ©pertoriÃ©s les classes et les fichiers de la librairie.
 <br /><br />
-Si vous rencontrez le moindre problème, veuillez-nous en parler via l'adresse e-mail <a href="mailto:dev@boxtale.com">dev@boxtale.com</a> ou le numéro de téléphone +33 (0)1 75 77 37 96.
+Si vous rencontrez le moindre problÃ¨me, veuillez-nous en parler via l'adresse e-mail <a href="mailto:dev@boxtale.com">dev@boxtale.com</a> ou le numÃ©ro de tÃ©lÃ©phone +33 (0)1 75 77 37 96.
 <br /><br />
 <br /><br />
-<div align="center"><small>Le document généré avec <a href="http://www.phpdoc.org">phpDocumentor v1.4.3</a></small></div><br />
+<div align="center"><small>Le document gÃ©nÃ©rÃ© avec <a href="http://www.phpdoc.org">phpDocumentor v1.4.3</a></small></div><br />
 </body>
 </html>
