--- a/documentation/li_Env.html
+++ b/documentation/li_Env.html
@@ -5,10 +5,11 @@
 			<!-- template designed by Marco Von Ballmoos -->
 			<title></title>
 			<link rel="stylesheet" href="media/stylesheet.css" />
-			<meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
+			<meta http-equiv='Content-Type' content='text/html; charset=UTF-8'/>
 		</head>
 		<body>
-						<div class="package-title">Env</div>
+						
+<div class="package-title">Env</div>
 <div class="package-details">
 
 	<dl class="tree">
@@ -38,4 +39,4 @@
 </div>
 <p class="notes"><a href="http://www.phpdoc.org" target="_blank">phpDocumentor v <span class="field">1.4.3</span></a></p>
 </BODY>
-</HTML>
+</HTML>
