--- a/documentation/classtrees_Env.html
+++ b/documentation/classtrees_Env.html
@@ -5,22 +5,23 @@
 			<!-- template designed by Marco Von Ballmoos -->
 			<title></title>
 			<link rel="stylesheet" href="media/stylesheet.css" />
-			<meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
+			<meta http-equiv='Content-Type' content='text/html; charset=UTF-8'/>
 		</head>
 		<body>
-						
+						
+
 <!-- Start of Class Data -->
 <H2>
 	
 </H2>
-<h2>La classe-mère Env_WebService</h2>
+<h2>La classe-mÃ¨re Env_WebService</h2>
 <ul>
 <li><a href="Env/Env_WebService.html">Env_WebService</a><ul>
-<li><a href="Env/Env_ContentCategory.html">Env_ContentCategory</a></li><li><a href="Env/Env_Country.html">Env_Country</a></li><li><a href="Env/Env_ParcelPoint.html">Env_ParcelPoint</a></li> <li><a href="Env/Env_Quotation.html">Env_Quotation</a></li></ul></li>
+<li><a href="Env/Env_ContentCategory.html">Env_ContentCategory</a></li><li><a href="Env/Env_Country.html">Env_Country</a></li><li><a href="Env/Env_ParcelPoint.html">Env_ParcelPoint</a></li><li><a href="Env/Env_Person.html">Env_Person</a></li><li><a href="Env/Env_Quotation.html">Env_Quotation</a></li></ul></li>
 </ul>
 
 	<div align="center"><small>
-		Documentation générée le 29/04/2011 avec <a href="http://www.phpdoc.org" target="_blank">phpDocumentor 1.4.3</a>
+		Documentation gÃ©nÃ©rÃ©e le 29/04/2011 avec <a href="http://www.phpdoc.org" target="_blank">phpDocumentor 1.4.3</a>
 	</small></div>
 	</body>
-</html>
+</html>
